--- a/about_me.html
+++ b/about_me.html
@@ -2,43 +2,21 @@
 <html lang="en">
 
 <head>
-
 	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Jaesik Park</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Freerancer Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
+    <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
     <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
-
-    <!-- Font Awesome icons (free version)-->
-    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
+
 <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
 	<div class="container">
 		<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
@@ -59,7 +37,7 @@
 	</div>
 </nav>
 
-<header class="masthead bg-primary text-white test-start">
+<header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
 		<h1 class="text-uppercase mb-0">About me</h1>
 	</div>
@@ -67,80 +45,74 @@
 
 
 <!-- Source -->
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-lg-6 test-start">
-			<h2> <span class="glyphicon glyphicon-briefcase"></span>  Work Experience</h2>
+		<div class="col-lg-6 text-start">
+			<h2> Work Experience</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
 				<h5>Adjunct Professor - Yonsei University</h5>
-				<span class="glyphicon glyphicon-map-marker"></span> Seoul, Republic of Korea<br>
-				<span class="glyphicon glyphicon-calendar"></span> April 2021 - <kbd>current</kbd>
+				Seoul, Republic of Korea<br>
+				April 2021 - <kbd>current</kbd>
 			</li>
 			<li class="list-group-item">
 				<h5>Assistant Professor - POSTECH</h5>
-				<span class="glyphicon glyphicon-map-marker"></span> Pohang, Kyungbuk, Republic of Korea<br>
-				<span class="glyphicon glyphicon-calendar"></span> April 2019 - <kbd>current</kbd>
+				Pohang, Kyungbuk, Republic of Korea<br>
+				April 2019 - <kbd>current</kbd>
 			</li>
 			<li class="list-group-item">
 				<h5>Staff Research Scientist - Intel Labs</h5>
 				Manager: <a href="https://vladlen.info" target="_blank">Dr. Vladlen Koltun</a><br>
-				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
-				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - March 2019
+				Santa Clara, California, USA<br>
+				Dec. 2015 - March 2019
 			</li>
 			<li class="list-group-item">
 				<h5>Post-Doc Researcher - KAIST</h5>
-				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
-				<span class="glyphicon glyphicon-calendar"></span> Aug. 2015 - Nov. 2015
+				Daejeon, Republic of Korea<br>
+				Aug. 2015 - Nov. 2015
 			</li>
 			<li class="list-group-item">
 				<h5>Research Intern - Microsoft Research</h5>
 				Mentor: <a href="https://www.microsoft.com/en-us/research/people/sudipsin/" target="_blank">Dr. Sudipta N. Sinha</a><br>
-				<span class="glyphicon glyphicon-map-marker"></span> Redmond, Washington, USA<br>
-				<span class="glyphicon glyphicon-calendar"></span>
+				Redmond, Washington, USA<br>
 				June 2013 – Sep. 2013
 			</li>
 			<li class="list-group-item">
 				<h5>Research Intern - Microsoft Research Asia</h5>
 				Mentor: <a href="http://www-infobiz.ist.osaka-u.ac.jp/user/matsushita/" target="_blank">Prof. Yasuyuki Matsushita</a> <br>
-				<span class="glyphicon glyphicon-map-marker"></span> Beijing, China <br>
-				<span class="glyphicon glyphicon-calendar"></span>
+				Beijing, China <br>
 				April 2012 – Oct. 2012
 			</li>
 			</ul>
 		</div>
 		<div class="col-lg-6 gx-4 gy-4">
-			<div class="col-12 test-start">
-				<h2> <span class="glyphicon glyphicon-education"></span>   Education</h2>
-				<ul class="list-group">
-				<li class="list-group-item">
-					<h5>Ph.D. in Electrical Engineering - KAIST</h5>
-					Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a>, Co-Advisor: <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en" target="_blank">Dr. Yu-Wing Tai</a><br>
-					<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
-					<span class="glyphicon glyphicon-calendar"></span> Feb. 2011 – Aug. 2015
-				</li>
-				<li class="list-group-item">
-					<h5>M.S. in Electrical Engineering - KAIST</h5>
-					Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a><br>
-					<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
-					<span class="glyphicon glyphicon-calendar"></span> Feb. 2009 – Feb. 2011
-				</li>
-				<li class="list-group-item">
-					<h5>B.E. in Media Communication Eng. - Hanyang Univ.</h5>
-					Summa Cum Laude<br>
-					<span class="glyphicon glyphicon-map-marker"></span> Seoul, Republic of Korea <br>
-					<span class="glyphicon glyphicon-calendar"></span> March 2005 – Feb. 2009
-				</li>
-				</ul>
-			</div>
-			<div class="col-12 test-start">
-				<h2> <span class="glyphicon glyphicon-th-list"></span>   Curriculum Vitae</h2>
-				<ul class="list-group">
-				<li class="list-group-item">
-					Please download <a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
-				</li>
-				</ul>
-			</div>	
+			<h2> Education</h2>
+			<ul class="list-group mb-4">
+			<li class="list-group-item">
+				<h5>Ph.D. in Electrical Engineering - KAIST</h5>
+				Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a>, Co-Advisor: <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en" target="_blank">Dr. Yu-Wing Tai</a><br>
+				Daejeon, Republic of Korea<br>
+				Feb. 2011 – Aug. 2015
+			</li>
+			<li class="list-group-item">
+				<h5>M.S. in Electrical Engineering - KAIST</h5>
+				Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a><br>
+				Daejeon, Republic of Korea<br>
+				Feb. 2009 – Feb. 2011
+			</li>
+			<li class="list-group-item">
+				<h5>B.E. in Media Communication Eng. - Hanyang Univ.</h5>
+				Summa Cum Laude<br>
+				Seoul, Republic of Korea <br>
+				March 2005 – Feb. 2009
+			</li>
+			</ul>
+			<h2>Curriculum Vitae</h2>
+			<ul class="list-group">
+			<li class="list-group-item">
+				Please download <a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
+			</li>
+			</ul>
 		</div>
 	</div>
 </div>
@@ -157,8 +129,10 @@
 		</div>
 </footer>
 
+<!-- Bootstrap 5.1.3 JavaScript-->
+<script src="https://jaesik.info/js/bootstrap.min.js"></script>
 <!-- Theme JavaScript for Navbar -->
-<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
+<script src="https://jaesik.info/js/scripts.js"></script>
 
 </body>
 
