--- a/source/html/contact.html
+++ b/source/html/contact.html
@@ -1,29 +1,28 @@
 <!-- Source -->
-<div class="container">
-	<br>
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-lg-4 test-start">
+		<div class="col-lg-4 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
+					<h3>Email</h3>
 					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-4 test-start">
+		<div class="col-lg-4 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-user"></span> To schedule a meeting</h3>
+					<h3>To schedule a meeting</h3>
 					1) Please send me an email.<br>
 					2) If the request is valid, I will provide a link that shows the available meeting slots.<br>
 					3) Select the best niche and confirm it.<br>
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-4 test-start">
+		<div class="col-lg-4 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply our lab</h3>
+					<h3>To apply our lab</h3>
 					1) Please send your CV to me via email.<br>
 					2-1) Fill out <a href="https://forms.gle/xrQLcT1cefHZuaG67" target="_blank">this form</a>.<br>
 					2-2) Apply <a href="https://adm-g.postech.ac.kr/ENG/" target="_blank"> POSTECH graduate school</a>.<br>
@@ -31,10 +30,10 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-12 test-start">
+		<div class="col-12 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
+					<h3>Office</h3>
 					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
 					(in Korean) 대한민국 경상북도 포항시 남구 청암로 77 포항공과대학교 제 2공학관 317호 (우: 37673)<br>
 				</li>
