--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -11,8 +11,10 @@
 		</div>
 </footer>
 
+<!-- Bootstrap 5.1.3 JavaScript-->
+<script src="https://jaesik.info/js/bootstrap.min.js"></script>
 <!-- Theme JavaScript for Navbar -->
-<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
+<script src="https://jaesik.info/js/scripts.js"></script>
 
 </body>
 
