--- a/academic_activities.html
+++ b/academic_activities.html
@@ -2,43 +2,21 @@
 <html lang="en">
 
 <head>
-
 	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Jaesik Park</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Freerancer Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
+    <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
     <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
-
-    <!-- Font Awesome icons (free version)-->
-    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
+
 <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
 	<div class="container">
 		<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
@@ -59,7 +37,7 @@
 	</div>
 </nav>
 
-<header class="masthead bg-primary text-white test-start">
+<header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
 		<h1 class="text-uppercase mb-0">Academic activities</h1>
 	</div>
@@ -67,11 +45,11 @@
 
 
 <!-- Source -->
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-6 text-left">
-			<h2> <span class="glyphicon glyphicon-globe"></span>Program Committee</h2>
-			<ul class="list-group">
+		<div class="col-6 text-start">
+			<h2>Program Committee</h2>
+			<ul class="list-group mb-4">
 				<li class="list-group-item">
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2021<br>
 					<mark>Senior Program Committee</mark>, Int. Joint Conf. on Artificial Intelligence (IJCAI), 2021<br>
@@ -82,7 +60,7 @@
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2019
 				</li>
 			</ul>
-			<h2> <span class="glyphicon glyphicon-sunglasses"></span>Reviewer</h2>
+			<h2>Reviewer</h2>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h4>International Conference</h4>
@@ -123,8 +101,8 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-6 text-left">
-			<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
+		<div class="col-6 text-start">
+			<h2>Awards</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
 				<h5><mark>Best EduTech Class</mark></h5>
@@ -186,8 +164,10 @@
 		</div>
 </footer>
 
+<!-- Bootstrap 5.1.3 JavaScript-->
+<script src="https://jaesik.info/js/bootstrap.min.js"></script>
 <!-- Theme JavaScript for Navbar -->
-<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
+<script src="https://jaesik.info/js/scripts.js"></script>
 
 </body>
 
