--- a/contact.html
+++ b/contact.html
@@ -2,43 +2,21 @@
 <html lang="en">
 
 <head>
-
 	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Jaesik Park</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Freerancer Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
+    <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
     <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
-
-    <!-- Font Awesome icons (free version)-->
-    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
+
 <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
 	<div class="container">
 		<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
@@ -59,7 +37,7 @@
 	</div>
 </nav>
 
-<header class="masthead bg-primary text-white test-start">
+<header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
 		<h1 class="text-uppercase mb-0">Contact</h1>
 	</div>
@@ -67,31 +45,30 @@
 
 
 <!-- Source -->
-<div class="container">
-	<br>
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-lg-4 test-start">
+		<div class="col-lg-4 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
+					<h3>Email</h3>
 					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-4 test-start">
+		<div class="col-lg-4 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-user"></span> To schedule a meeting</h3>
+					<h3>To schedule a meeting</h3>
 					1) Please send me an email.<br>
 					2) If the request is valid, I will provide a link that shows the available meeting slots.<br>
 					3) Select the best niche and confirm it.<br>
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-4 test-start">
+		<div class="col-lg-4 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply our lab</h3>
+					<h3>To apply our lab</h3>
 					1) Please send your CV to me via email.<br>
 					2-1) Fill out <a href="https://forms.gle/xrQLcT1cefHZuaG67" target="_blank">this form</a>.<br>
 					2-2) Apply <a href="https://adm-g.postech.ac.kr/ENG/" target="_blank"> POSTECH graduate school</a>.<br>
@@ -99,10 +76,10 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-12 test-start">
+		<div class="col-12 text-start">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
+					<h3>Office</h3>
 					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
 					(in Korean) 대한민국 경상북도 포항시 남구 청암로 77 포항공과대학교 제 2공학관 317호 (우: 37673)<br>
 				</li>
@@ -126,8 +103,10 @@
 		</div>
 </footer>
 
+<!-- Bootstrap 5.1.3 JavaScript-->
+<script src="https://jaesik.info/js/bootstrap.min.js"></script>
 <!-- Theme JavaScript for Navbar -->
-<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
+<script src="https://jaesik.info/js/scripts.js"></script>
 
 </body>
 
