--- a/lab.html
+++ b/lab.html
@@ -2,43 +2,21 @@
 <html lang="en">
 
 <head>
-
 	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Jaesik Park</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Freerancer Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
+    <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
     <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
-
-    <!-- Font Awesome icons (free version)-->
-    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
+
 <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
 	<div class="container">
 		<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
@@ -59,7 +37,7 @@
 	</div>
 </nav>
 
-<header class="masthead bg-primary text-white test-start">
+<header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
 		<h1 class="text-uppercase mb-0">@POSTECH</h1>
 	</div>
@@ -67,10 +45,10 @@
 
 
 <!-- Source -->
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-6">
-			<h3 class="name"> <span class="glyphicon glyphicon-flag"></span> About the University</h3>
+			<h3>About the University</h3>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<a href="https://en.wikipedia.org/wiki/Pohang_University_of_Science_and_Technology" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a><br>
@@ -89,103 +67,103 @@
 			</ul>
 		</div>
 		<div class="col-lg-6">
-			<h3 class="name"> <span class="glyphicon glyphicon-home"></span> Computer Vision Lab.</h3>
-			<img src="source/images/lab.jpg" class="img-thumbnail">
+			<h3>Computer Vision Lab.</h3>
+			<img src="source/images/lab.jpg" class="img-thumbnail shadow">
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Graduate Students</h3>
+		<h3>Graduate Students</h3>
 		<div class="col-3 text-center">
-			<img src="source/images/kwon-young.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kwonyoung Ryu</h5>
 			2021 Spring<br>
-			Ph.D. student<br><br>
+			Ph.D. student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/junha.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/junha.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Junha Lee</h5>
 			2021 Fall<br>
-			Ph.D. student<br><br>
+			Ph.D. student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/jaebong.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaebong Jeong</h5>
 			2019 Fall<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/minguk.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>MinGuk Kang</h5>
 			2020 Spring<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/chunghyun.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Chunghyun Park</h5>
 			2020 Spring<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/jinoh.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jin-Oh Cho</h5>
 			2020 Fall<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/seokjun.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seokjun Ahn</h5>
 			2020 Fall<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/jiye.jpeg" class="rounded-circle img-thumbnail">
+			<img src="source/images/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Ji Ye Kim</h5>
 			2021 Spring<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/ganghee.jpeg" class="rounded-circle img-thumbnail">
+			<img src="source/images/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kanghee Lee</h5>
 			2021 Spring<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/seungju.jpeg" class="rounded-circle img-thumbnail">
+			<img src="source/images/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seungjoo Shin</h5>
 			2021 Fall<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/dongmin.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Dongmin You</h5>
 			2022 Spring<br>
-			Master student<br><br>
+			Master student
 		</div>
 		<div class="col-3 text-center">
-			<img src="source/images/seunguk.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seunguk Do</h5>
 			2022 Spring<br>
-			Master student<br><br>
+			Master student
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Alumni</h3>
+		<h3>Alumni</h3>
 		<div class="col-3 text-center">
-			<img src="source/images/hyunmin.jpg" class="rounded-circle img-thumbnail">
+			<img src="source/images/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
 			2021 Spring<br>
 			Master degree<br>
-			LG AI Research<br><br>
+			LG AI Research
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Undergraduate Students (selected)</h3>
+		<h3>Undergraduate Students (selected)</h3>
 		<div class="col-3 text-center">
 			<h5>Junghyuk Shin</h5>
 			Selected as the best undergraduate research project (최우수 UGRP)<br>
@@ -197,9 +175,11 @@
 			2021.07<br>
 		</div>
 	</div>
+</div>
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-lg-6 test-start">
-			<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
+		<div class="col-lg-6 text-start">
+			<h3>Teaching</h3>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h5>2021 Fall</h5>
@@ -234,44 +214,44 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-6 test-start">
-			<h3 class="name"> <span class="glyphicon glyphicon-piggy-bank"></span> Funding</h3>
+		<div class="col-lg-6 text-start">
+			<h3>Funding</h3>
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h5>2021.05-2024.05, IITP., Republic of Korea</h5>
-					Developing image synthesis approach for challenging scenarios<br>
+					<h5>IITP, Republic of Korea</h5>
+					[2021.05-2024.05] Image inpainting and synthesis<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2021.05-2022.05, Samsung Electronics</h5>
-					Research on camera localization<br>
+					<h5>Samsung Electronics Corp.</h5>
+					[2021.05-2022.05] Camera localization<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2020.04-current, Grant fund, Intel Corp., USA</h5>
-					Contribution to Open3D<br>
+					<h5>Intel Corp., USA</h5>
+					[2020.04-current] Team Open3D<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2020.03-2023.03, Ministry of Science and ICT, Republic of Korea</h5>
-					과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실<br>
+					<h5>Ministry of Science and ICT, Republic of Korea</h5>
+					[2020.03-2023.03] 과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2019.04-2022.04, Grant fund, POSTECH, Republic of Korea</h5>
-					포항공과대학교 신임교수 초기정착비<br>
+					<h5>POSTECH, Republic of Korea</h5>
+					[2019.04-2022.04] 포항공과대학교 신임교수 초기정착비<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2019.10-2021.10, Grant fund, Qualcomm Corp., USA</h5>
-					Research on latent feature refinement<br>
+					<h5>Qualcomm Corp., USA</h5>
+					[2019.10-2021.10] Geometric perception<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2021.03-2021.09, Hyundai Motor Group</h5>
-					Research on LiDAR data augmentation<br>				
+					<h5>Hyundai Motor Group</h5>
+					[2021.03-2021.09] LiDAR data augmentation<br>				
 				</li>
 				<li class="list-group-item">
-					<h5>2020.06-2021.06, Grant fund, Microsoft Reserach Asia</h5>
-					Research on content creation<br>
+					<h5>Microsoft Reserach Asia</h5>
+					[2020.06-2021.06] Content creation<br>
 				</li>
 				<li class="list-group-item">
-					<h5>2020.03-2020.10, ETRI, Republic of Korea</h5>
-					Developing 3D human capturing system<br>
+					<h5>ETRI, Republic of Korea</h5>
+					[2020.03-2020.10] 3D human capturing system<br>
 				</li>
 			</ul>
 		</div>
@@ -290,8 +270,10 @@
 		</div>
 </footer>
 
+<!-- Bootstrap 5.1.3 JavaScript-->
+<script src="https://jaesik.info/js/bootstrap.min.js"></script>
 <!-- Theme JavaScript for Navbar -->
-<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
+<script src="https://jaesik.info/js/scripts.js"></script>
 
 </body>
 
