--- a/publications/lightcalib/header.html
+++ b/publications/lightcalib/header.html
@@ -18,7 +18,7 @@
 	</div>
 </nav>
 
-<header class="masthead bg-primary text-white test-start">
+<header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
 		<h1 class="text-uppercase mb-0">Calibrating a Non-isotropic Near Point Light Source</h1>
 	</div>
