--- a/publications/lightcalib/index.html
+++ b/publications/lightcalib/index.html
@@ -2,43 +2,21 @@
 <html lang="en">
 
 <head>
-
 	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Jaesik Park</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Freerancer Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
+    <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
     <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
-
-    <!-- Font Awesome icons (free version)-->
-    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
+
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 	<div class="container">
@@ -103,21 +81,11 @@
 		<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		CVPR, 2014<br>
 		(Dataset has raw images used in the experiment. Note that the size of this file is 2.15GB)</p>
-		<a href="http://jaesik.info/publications/lightcalib/paper.pdf" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-		<a href="http://jaesik.info/publications/lightcalib/supp.pdf" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
-		</a>
-		<a href="http://jaesik.info/publications/lightcalib/poster.pdf" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-blackboard"></span> Poster
-		</a>
-		<a href="http://jaesik.info/publications/lightcalib/bibtex.txt" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-list"></span> Bibtex
-		</a>
-		<a href="https://postechackr-my.sharepoint.com/:u:/g/personal/jaesik_postech_ac_kr/Ebnodir1zzhJgiQupYkhyuQBsCLfAkNNKZPqx3eS-ihw5w?e=evJ2I5" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-download-alt"></span> Data
-		</a>
+			<a href="http://jaesik.info/publications/lightcalib/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="http://jaesik.info/publications/lightcalib/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="http://jaesik.info/publications/lightcalib/poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
+			<a href="http://jaesik.info/publications/lightcalib/bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="https://postechackr-my.sharepoint.com/:u:/g/personal/jaesik_postech_ac_kr/Ebnodir1zzhJgiQupYkhyuQBsCLfAkNNKZPqx3eS-ihw5w?e=evJ2I5" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
 		<p><br></p>
 </div>
 
@@ -134,8 +102,10 @@
 		</div>
 </footer>
 
+<!-- Bootstrap 5.1.3 JavaScript-->
+<script src="https://jaesik.info/js/bootstrap.min.js"></script>
 <!-- Theme JavaScript for Navbar -->
-<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
+<script src="https://jaesik.info/js/scripts.js"></script>
 
 </body>
 
