--- a/source/html/academic_activities.html
+++ b/source/html/academic_activities.html
@@ -1,9 +1,9 @@
 <!-- Source -->
-<div class="container">
+<div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-6 text-left">
-			<h2> <span class="glyphicon glyphicon-globe"></span>Program Committee</h2>
-			<ul class="list-group">
+		<div class="col-6 text-start">
+			<h2>Program Committee</h2>
+			<ul class="list-group mb-4">
 				<li class="list-group-item">
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2021<br>
 					<mark>Senior Program Committee</mark>, Int. Joint Conf. on Artificial Intelligence (IJCAI), 2021<br>
@@ -14,7 +14,7 @@
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2019
 				</li>
 			</ul>
-			<h2> <span class="glyphicon glyphicon-sunglasses"></span>Reviewer</h2>
+			<h2>Reviewer</h2>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h4>International Conference</h4>
@@ -55,8 +55,8 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-6 text-left">
-			<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
+		<div class="col-6 text-start">
+			<h2>Awards</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
 				<h5><mark>Best EduTech Class</mark></h5>
