--- a/source/html/header.html
+++ b/source/html/header.html
@@ -2,40 +2,18 @@
 <html lang="en">
 
 <head>
-
 	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Jaesik Park</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Freerancer Core CSS -->
-    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
+    <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
     <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
-
-    <!-- Font Awesome icons (free version)-->
-    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
+
