--- a/lab.html
+++ b/lab.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <title>Jaesik Park</title>
     <!-- Custom CSS (https://github.com/StartBootstrap/startbootstrap-freelancer/releases/tag/v7.0.5)-->
-    <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
+    <link href="https://jaesik.info/css/styles.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
