minor margin fix

--- a/about_me.html
+++ b/about_me.html
@@ -39,7 +39,7 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mb-0">About me</h1>
+		<h1 class="text-uppercase mt-3">About me</h1>
 	</div>
 </header>
 
