--- a/academic_activities.html
+++ b/academic_activities.html
@@ -39,7 +39,7 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mb-0">Academic activities</h1>
+		<h1 class="text-uppercase mt-3">Academic activities</h1>
 	</div>
 </header>
 
@@ -47,7 +47,7 @@
 <!-- Source -->
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-6 text-start">
+		<div class="col-lg-6 text-start">
 			<h2>Program Committee</h2>
 			<ul class="list-group mb-4">
 				<li class="list-group-item">
@@ -101,7 +101,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-6 text-start">
+		<div class="col-lg-6 text-start">
 			<h2>Awards</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
