--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mb-0">Contact</h1>
+		<h1 class="text-uppercase mt-3">Contact</h1>
 	</div>
 </header>
 
