--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 text-start">
-				<h1 class="text-uppercase mb-0">Publications</h1>
+				<h1 class="text-uppercase mt-3">Publications</h1>
 			</div>
 			<div class="col-lg-6 text-end">
 				<a href="https://scholar.google.com/citations?user=_3q6KBIAAAAJ&hl=en" target="_blank" class="btn btn-secondary" role="button">
