--- a/publications/identigram/header.html
+++ b/publications/identigram/header.html
@@ -20,7 +20,7 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mb-0">Identigram/Watermark Removal</h1>
+		<h1 class="text-uppercase mt-3">Identigram/Watermark Removal</h1>
 	</div>
 </header>
 
