--- a/publications/lightcalib/header.html
+++ b/publications/lightcalib/header.html
@@ -20,7 +20,7 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mb-0">Calibrating a Non-isotropic Near Point Light Source</h1>
+		<h1 class="text-uppercase mt-3">Calibrating a Non-isotropic Near Point Light Source</h1>
 	</div>
 </header>
 
