--- a/publications/multiviewps/header.html
+++ b/publications/multiviewps/header.html
@@ -20,7 +20,7 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mb-0">Multiview Photometric Stereo</h1>
+		<h1 class="text-uppercase mt-3">Multiview Photometric Stereo</h1>
 	</div>
 </header>
 
