--- a/source/html/academic_activities.html
+++ b/source/html/academic_activities.html
@@ -1,7 +1,7 @@
 <!-- Source -->
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-6 text-start">
+		<div class="col-lg-6 text-start">
 			<h2>Program Committee</h2>
 			<ul class="list-group mb-4">
 				<li class="list-group-item">
@@ -55,7 +55,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-6 text-start">
+		<div class="col-lg-6 text-start">
 			<h2>Awards</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
